# backend/src/controllers/path.controller.ts
@@ -1,46 +1,47 @@
 import { Controller } from "@tsoa/runtime";
-import {Get, Post, OperationId, Path, Route, Tags, Request} from "tsoa";
-import * as PathEntity from "../entities/path.entity";
+import { Body, Get, OperationId, Path, Post, Route, Tags } from "tsoa";
 import { PathSegment } from "../entities/path-segment.entity";
+import * as PathEntity from "../entities/path.entity";
+import { CreatePathModel } from "../interfaces/path.interfaces";
+import { AlgorithmService, LocationItem } from "../services/algorithm.service";
 import * as PathService from "../services/path.service";
-import * as koa from "koa";
 
 @Route("path")
-export class Places extends Controller {
-    @Get("all")
-    @Tags("BackendApi")
-    @OperationId("placesGetAll")
-    public async getAll(): Promise<Array<PathEntity.Path>> {
-        return await PathService.findAll()
-    }
+export class Pathes extends Controller {
+	@Get("all")
+	@Tags("BackendApi")
+	@OperationId("placesGetAll")
+	public async getAll(): Promise<Array<PathEntity.Path>> {
+		return await PathService.findAll();
+	}
 
-    @Get(`{path_id}`)
-    @Tags("BackendApi")
-    @OperationId("pathGetById")
-    public async getById(
-        @Path() path_id: string,
-    ): Promise<PathEntity.Path> {
-        return await PathService.findPath({ where: { _id: path_id } })
-    }
+	@Get(`{path_id}`)
+	@Tags("BackendApi")
+	@OperationId("pathGetById")
+	public async getById(
+		@Path() path_id: string,
+	): Promise<PathEntity.Path> {
+		return await PathService.findPath({ where: { _id: path_id } });
+	}
 
-    @Get(`{path_id}/segments`)
-    @Tags("BackendApi")
-    @OperationId("pathSegmentsGetById")
-    public async getSegmentsById(
-        @Path() path_id: string,
-    ): Promise<PathSegment[]> {
-        let path = await PathService.findPath({ where: { _id: path_id }});
-        return await PathService.getSegments(path);
-    }
+	@Get(`{path_id}/segments`)
+	@Tags("BackendApi")
+	@OperationId("pathSegmentsGetById")
+	public async getSegmentsById(
+		@Path() path_id: string,
+	): Promise<PathSegment[]> {
+		let path = await PathService.findPath({ where: { _id: path_id } });
+		return await PathService.getSegments(path);
+	}
 
-    @Post(`create`)
-    @Tags("BackendApi")
-    @OperationId("pathCreate")
-    public async createPath(
-        @Request() request: koa.Request,
-    ): Promise<PathEntity.Path> {
-        const data = request.body!;
-        // TODO Отжиг и создание маршрута
-        return {segments: []}
-    }
+	@Post(`create`)
+	@Tags("BackendApi")
+	@OperationId("pathCreate")
+	public async createPath(
+		@Body() dto: CreatePathModel,
+	): Promise<LocationItem[]> {
+		const algorithm = new AlgorithmService(dto.prompt, dto.startPosition);
+
+		return await algorithm.generate();
+	}
 }
